Implementado Cloud Endpoints etapa tres do projeto completa

--- a/libandroidpiadas/src/main/res/layout/activity_piada.xml
+++ b/libandroidpiadas/src/main/res/layout/activity_piada.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
     tools:context=".PiadaActivity">
 
     <TextView
@@ -15,5 +16,15 @@
         android:layout_gravity="center"
         android:layout_margin="8dp"
         tools:text="Minha Piada"/>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/tv_piada_api"
+        android:textSize="16sp"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_margin="8dp"
+        tools:text="Minha Piada API"/>
 
 </LinearLayout>
